# WateringHub

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
custom_components/wateringhub/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json  switch.py
custom_components/wateringhub/translations/: en.json
docs/: PROJECT_STATUS.md
docs/superpowers/plans/: 2026-03-28-wateringhub-implementation.md
docs/superpowers/specs/: 2026-03-28-wateringhub-design.md
tests/: __init__.py  conftest.py  test_coordinator.py  test_validation.py
